// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PredictedItem renders renders the default state 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#212121",
        "flex": 1,
        "fontFamily": "Muli-SemiBold",
        "fontSize": 17,
        "marginRight": 15,
      }
    }
  >
    Beer
  </Text>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <ProgressBar
      value={25}
    />
    <View
      style={
        Object {
          "bottom": 0,
          "elevation": 100,
          "justifyContent": "center",
          "position": "absolute",
          "right": 15,
          "top": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#212121",
            "fontFamily": "Muli-SemiBold",
            "fontSize": 15,
          }
        }
      >
        2 days left
      </Text>
    </View>
  </View>
</View>
`;

exports[`PredictedItem renders renders the not enough data state 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#212121",
        "flex": 1,
        "fontFamily": "Muli-SemiBold",
        "fontSize": 17,
        "marginRight": 15,
      }
    }
  >
    Whiskey
  </Text>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#212121",
          "fontFamily": "Muli-SemiBold",
          "fontSize": 17,
        }
      }
    >
      Not enough data
    </Text>
  </View>
</View>
`;

exports[`PredictedItem renders renders the out of stock state 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#212121",
        "flex": 1,
        "fontFamily": "Muli-SemiBold",
        "fontSize": 17,
        "marginRight": 15,
      }
    }
  >
    Wine
  </Text>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <ProgressBar
      value={0}
    />
    <View
      style={
        Object {
          "bottom": 0,
          "elevation": 100,
          "justifyContent": "center",
          "position": "absolute",
          "right": 15,
          "top": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#212121",
            "fontFamily": "Muli-SemiBold",
            "fontSize": 15,
          }
        }
      >
        0 days left
      </Text>
    </View>
  </View>
</View>
`;

exports[`PredictedItem renders renders with minimum required props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#212121",
        "flex": 1,
        "fontFamily": "Muli-SemiBold",
        "fontSize": 17,
        "marginRight": 15,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <ProgressBar />
    <View
      style={
        Object {
          "bottom": 0,
          "elevation": 100,
          "justifyContent": "center",
          "position": "absolute",
          "right": 15,
          "top": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#212121",
            "fontFamily": "Muli-SemiBold",
            "fontSize": 15,
          }
        }
      >
        NaN days left
      </Text>
    </View>
  </View>
</View>
`;
